check if url exists before download

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^17.0.16",
+    "axios": "^0.25.0",
     "node-downloader-helper": "^2.0.1"
   }
 }
