--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "nicklausw",
   "license": "MIT",
   "dependencies": {
+    "@types/html-to-text": "^8.0.1",
     "@types/node": "^17.0.16",
     "axios": "^0.25.0",
+    "html-to-text": "^8.1.0",
     "node-downloader-helper": "^2.0.1"
   }
 }
